# cli-commando

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  PR_DESCRIPTION.md  README.md  SECURITY.md  bootstrap.sh  context7.json  main.py  mypy.ini  patch.diff  pyproject.toml  rewrite.py
.github/workflows/: ci.yml  lint_and_test.yml
cli_commando.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
commando/: main.py
commando/core/: audit.py  scanner.py
commando/ui/: dashboard.py
commando/utils/: config.py  io.py
docs/adr/: 0001-zero-trust-model.md
tests/: test_config.py  test_io.py  test_main.py
