[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-commando"
version = "0.1.0"
description = "Terminal Command Explorer & Tutor"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
commando = "commando.main:cli"

[tool.setuptools.packages.find]
include = ["commando*"]
